// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text area should renderTextarea the text area component 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(200,200,200,1);
  background-color: rgba(255,255,255,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(146,146,146,1);
}

<ForwardRef
  onChange={[MockFunction]}
  placeholder="input here ..."
>
  <styled.textarea
    className=""
    data-testid="lui-textarea"
    disabled={false}
    id="lui-textarea"
    isDisabled={false}
    isError={false}
    isFullWidth={false}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <StyledComponent
      className=""
      data-testid="lui-textarea"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
              ";
  resize: none;
  overflow: auto;
  border-radius: ",
              [Function],
              ";
  box-sizing: border-box;
  font-family: ",
              [Function],
              ";
  ",
              [Function],
              ";
  ",
              [Function],
              ";
  ::placeholder {
    color: ",
              [Function],
              ";
  }
  :hover:not(:focus) {
    ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.textarea",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "textarea",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={[Function]}
      id="lui-textarea"
      isDisabled={false}
      isError={false}
      isFullWidth={false}
      isInverse={false}
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    >
      <textarea
        className="c0"
        data-testid="lui-textarea"
        disabled={false}
        id="lui-textarea"
        onChange={[Function]}
        placeholder="input here ..."
        rows={3}
        size="md"
      />
    </StyledComponent>
  </styled.textarea>
</ForwardRef>
`;

exports[`Text area variations of the text area in all given sizes lg should renderTextarea 100% width of with isFullWidth prop 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: 100%;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(200,200,200,1);
  background-color: rgba(255,255,255,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(146,146,146,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={false}
  isFullWidth={true}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={false}
    isFullWidth={true}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes lg should renderTextarea the component in a disabled state with the isDisabled prop 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  cursor: not-allowed;
  background-color: #f8f8f8;
  border: 1px solid rgba(227,227,227,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={true}
  id="lui-textarea"
  isDisabled={true}
  isError={false}
  isFullWidth={false}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={true}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={true}
    isError={false}
    isFullWidth={false}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={true}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes lg should renderTextarea the component with a red border if the isError state is true 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(255,28,74,1);
  background-color: rgba(255,255,255,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(255,28,74,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={true}
  isFullWidth={false}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={true}
    isFullWidth={false}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes lg should renderTextarea the component with a white border and transparent background if the isInverse prop is true 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(255,255,255,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(248,248,248,1);
  background-color: transparent;
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(255,255,255,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={false}
  isFullWidth={false}
  isInverse={true}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={false}
    isFullWidth={false}
    isInverse={true}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes md should renderTextarea 100% width of with isFullWidth prop 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: 100%;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(200,200,200,1);
  background-color: rgba(255,255,255,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(146,146,146,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={false}
  isFullWidth={true}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={false}
    isFullWidth={true}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes md should renderTextarea the component in a disabled state with the isDisabled prop 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  cursor: not-allowed;
  background-color: #f8f8f8;
  border: 1px solid rgba(227,227,227,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={true}
  id="lui-textarea"
  isDisabled={true}
  isError={false}
  isFullWidth={false}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={true}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={true}
    isError={false}
    isFullWidth={false}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={true}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes md should renderTextarea the component with a red border if the isError state is true 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(255,28,74,1);
  background-color: rgba(255,255,255,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(255,28,74,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={true}
  isFullWidth={false}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={true}
    isFullWidth={false}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes md should renderTextarea the component with a white border and transparent background if the isInverse prop is true 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(255,255,255,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(248,248,248,1);
  background-color: transparent;
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(255,255,255,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={false}
  isFullWidth={false}
  isInverse={true}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={false}
    isFullWidth={false}
    isInverse={true}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes sm should renderTextarea 100% width of with isFullWidth prop 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: 100%;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(200,200,200,1);
  background-color: rgba(255,255,255,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(146,146,146,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={false}
  isFullWidth={true}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={false}
    isFullWidth={true}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes sm should renderTextarea the component in a disabled state with the isDisabled prop 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  cursor: not-allowed;
  background-color: #f8f8f8;
  border: 1px solid rgba(227,227,227,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={true}
  id="lui-textarea"
  isDisabled={true}
  isError={false}
  isFullWidth={false}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={true}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={true}
    isError={false}
    isFullWidth={false}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={true}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes sm should renderTextarea the component with a red border if the isError state is true 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(71,71,71,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(255,28,74,1);
  background-color: rgba(255,255,255,1);
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(255,28,74,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={true}
  isFullWidth={false}
  isInverse={false}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={true}
    isFullWidth={false}
    isInverse={false}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;

exports[`Text area variations of the text area in all given sizes sm should renderTextarea the component with a white border and transparent background if the isInverse prop is true 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  resize: none;
  overflow: auto;
  border-radius: 6px;
  box-sizing: border-box;
  font-family: 'Open Sans',sans-serif;
  color: rgba(255,255,255,1);
  width: auto;
  padding: calc(0.75 * var(--lendi-ui-size)) var(--lendi-ui-size);
  font-size: calc(1.125 * var(--lendi-ui-size));
  height: calc(1.333 * 3 * calc(1.125 * var(--lendi-ui-size)) + 2 * calc(0.75 * var(--lendi-ui-size)));
  border: 1px solid rgba(248,248,248,1);
  background-color: transparent;
}

.c0::-webkit-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::-moz-placeholder {
  color: rgba(173,173,173,1);
}

.c0:-ms-input-placeholder {
  color: rgba(173,173,173,1);
}

.c0::placeholder {
  color: rgba(173,173,173,1);
}

.c0:hover:not(:focus) {
  border: 1px solid rgba(255,255,255,1);
}

<styled.textarea
  className=""
  data-testid="lui-textarea"
  disabled={false}
  id="lui-textarea"
  isDisabled={false}
  isError={false}
  isFullWidth={false}
  isInverse={true}
  onChange={[Function]}
  placeholder="input here ..."
  rows={3}
  size="md"
>
  <StyledComponent
    className=""
    data-testid="lui-textarea"
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  resize: none;
  overflow: auto;
  border-radius: ",
            [Function],
            ";
  box-sizing: border-box;
  font-family: ",
            [Function],
            ";
  ",
            [Function],
            ";
  ",
            [Function],
            ";
  ::placeholder {
    color: ",
            [Function],
            ";
  }
  :hover:not(:focus) {
    ",
            [Function],
            "
  }
",
          ],
        },
        "displayName": "styled.textarea",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "textarea",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={[Function]}
    id="lui-textarea"
    isDisabled={false}
    isError={false}
    isFullWidth={false}
    isInverse={true}
    onChange={[Function]}
    placeholder="input here ..."
    rows={3}
    size="md"
  >
    <textarea
      className="c0"
      data-testid="lui-textarea"
      disabled={false}
      id="lui-textarea"
      onChange={[Function]}
      placeholder="input here ..."
      rows={3}
      size="md"
    />
  </StyledComponent>
</styled.textarea>
`;
